--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: scala
 jdk:
-  - oraclejdk8
+  - openjdk8
+  - openjdk11
 scala:
   - 2.11.12
-  - 2.12.8
+  - 2.12.10
 script: "sbt clean coverage test coverageReport"
 after_success:
   - bash <(curl -s https://codecov.io/bash)
