routine project cleanup

--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -10,7 +10,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Set up Scala
-        uses: olafurpg/setup-scala@v10
+        uses: olafurpg/setup-scala@v11
+        with:
+          java-version: openjdk@1.14
       - name: Cache sbt
         uses: actions/cache@v2
         with:
